4.23

- Changed: Make use of new triggerinterval stuff to run scripts at a specific time 
- Changed: Added setTriggerinterval as new parameter to createTrigger and createTriggerLocal functions (by alexvladn)

4.22

- Added: Chernarus 2020 version
- Added: French translation by -mj-
- Fixed: Do not select another respawn like squad leader inside the 40m MHQ alternative respawn area (now really fixed)
- Fixed: Somehow a "p" landed at the end of d_launcher_cooldown in description.ext
- Fixed: AI can now use vehicle service points again (and not only AI in UAVs)