@@ -7,6 +7,7 @@
 
 - Added: Chernarus 2020 version
 - Added: French translation by -mj-
+- Added: No Go zone for the TT version. Players may not go beyond the map, otherwise they will be killed
 - Fixed: Do not select another respawn like squad leader inside the 40m MHQ alternative respawn area (now really fixed)
 - Fixed: Somehow a "p" landed at the end of d_launcher_cooldown in description.ext
 - Fixed: AI can now use vehicle service points again (and not only AI in UAVs)
